--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "node-fetch": "^3.2.6",
+    "serve-static": "^1.15.0",
     "uuid": "^9.0.0"
   }
 }
