--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^18.0.6",
     "adm-zip": "^0.5.10",
     "body-parser": "^1.20.1",
+    "compression": "^1.7.4",
     "express": "^4.18.2",
     "node-fetch": "^3.2.6",
     "serve-static": "^1.15.0",
